agregado homwork 02-JS-I

--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/HomeWork.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/HomeWork.html
@@ -11,7 +11,7 @@
     <h4>tarea de HTML/css</h4>
   </div>
   <div class="divClass">
-    <span id="spanId">Spaghetti horneado: platillo con una mezcla de sabores que sabe mejor preparado en casa</span>
+    <span id="spanId">Spaghetti horneado</span>
     <a href="https://lupillos.com.mx/">Lupillos</a>
   </div>
     <div class="thirdDiv">
